--- a/brothers.html
+++ b/brothers.html
@@ -38,20 +38,16 @@
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="about.html">AKPsi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
+          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="brothers.html">Brothers</a></li>
+          <li role="presentation"><a href="brothers.html">Brotherhood</a></li>
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
           <li role="presentation"><a href="facultyadvisor.html">Faculty Advisor</a></li>
         </ul></li>
-    <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Events<span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="rush.html">Recruitment</a></li>
-          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
-        </ul></li>
+    <li role="presentation"><a href="rush.html">Recruitment</a></li>
     <li role="presentation"><a href="careers.html">Careers</a></li>
     <li role="presentation"><a href="alumni.html">Alumni</a></li>
     <li role="presentation"><a href="contact.html">Contact</a></li>
@@ -66,10 +62,86 @@
 <!-- Body Start -->
 <div class="container">
   <div class="page-header">Meet Our Chapter</div>
+
+  <!-- Row 1 Start -->
   <div class="row">
-    <div class="image"><img src="http://placehold.it/400x250"></div>
-    <!-- Include a photo collage/carousel of all our pictures together as a brotherhood to emphasize that element -->
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/VdKRtXM.jpg" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/BNYaox7.jpg" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
   </div>
+  <!-- Row 1 End-->
+
+  <!-- Row 2 Start -->
+  <div class="row">
+
+
+    <div class="col-sm-6 col-md-6">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/pOERh0E.jpg" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/gf83Zt3.jpg" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
+  </div>
+  <!-- Row 2 End -->
+
+  <!-- Row 3 Start-->
+  <div class="row">
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/iGe5Qkr.jpg" alt="pic" width="350" height="500" class="img-responsive">
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/yt40kZ1.jpg" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/X1WwPnT.jpg" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
+  </div>
+  <!-- Row 3 End -->
+
+  <!-- Row 4 Start -->
+  <div class="row">
+    <div class="col-md-6 col-md-6">
+      <div class="thumbnail">
+        <img src="" alt="pic" width="350" height="500" class="img-responsive">
+      </div>
+    </div>
+
+    <div class="col-md-6 col-md-6">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/UmG5p5c.jpg" alt="pic" width="350" height="350" class="img-responsive">
+      </div>
+    </div>
+  </div>
+  <!-- Row 4 End-->
+  http://i.imgur.com/QNNnzzo.jpg
+
 </div>
 
 <div class="padding"></div>
@@ -201,7 +273,6 @@
       <ul style="list-style-type:none">
         <li>Carly Abramowitz</li>
         <li>Matt Agritelley</li>
-        <li>Arvind Balasundaram</li>
         <li>Liv Dansky</li>
         <li>Weber Gaowen</li>
         <li>Jonathan Getzoff</li>
