--- a/executiveboard.html
+++ b/executiveboard.html
@@ -38,6 +38,7 @@
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="about.html">AKPsi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
+          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
@@ -46,12 +47,7 @@
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
           <li role="presentation"><a href="facultyadvisor.html">Faculty Advisor</a></li>
         </ul></li>
-    <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Events<span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="rush.html">Recruitment</a></li>
-          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
-        </ul></li>
+    <li role="presentation"><a href="rush.html">Recruitment</a></li>
     <li role="presentation"><a href="careers.html">Careers</a></li>
     <li role="presentation"><a href="alumni.html">Alumni</a></li>
     <li role="presentation"><a href="contact.html">Contact</a></li>
@@ -70,7 +66,7 @@
   <div class="row"> 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="president" class="img-responsive">
+        <img src="http://i.imgur.com/D03bnVw.jpg" alt="president" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">President</div>
           <div class="thumbnail-secondary-header">Sam Gorsche</div>
@@ -81,7 +77,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpadministration" class="img-responsive">
+        <img src="http://i.imgur.com/VHObzRK.jpg" alt="vpadministration" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Administration</div>
           <div class="thumbnail-secondary-header">Casey Wagenaar</div>
@@ -92,7 +88,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vphumanresources" class="img-responsive">
+        <img src="http://i.imgur.com/Q8B57G7.jpg" alt="vphumanresources" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Human Resources</div>
           <div class="thumbnail-secondary-header">Evan Hindes</div>
@@ -103,7 +99,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="treasurer" class="img-responsive">
+        <img src="http://i.imgur.com/lAH99Dv.jpg" alt="treasurer" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">Treasurer</div>
           <div class="thumbnail-secondary-header">Anjan Narain</div>
@@ -118,7 +114,7 @@
   <div class="row"> 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpmembership" class="img-responsive">
+        <img src="http://i.imgur.com/yLkWgLX.jpg" alt="vpmembership" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Membership</div>
           <div class="thumbnail-secondary-header">Shrey Aggarwal</div>
@@ -129,7 +125,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpprofessional" class="img-responsive">
+        <img src="http://i.imgur.com/Mc5rMND.jpg" alt="vpprofessional" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Professional Development</div>
           <div class="thumbnail-secondary-header">Tyler Friedman</div>
@@ -140,7 +136,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vprecruitment" class="img-responsive">
+        <img src="http://i.imgur.com/YqkV53u.jpg" alt="vprecruitment" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Recruitment</div>
           <div class="thumbnail-secondary-header">Siena Dixon</div>
@@ -151,7 +147,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vprecruitment" class="img-responsive">
+        <img src="http://i.imgur.com/w3QT5fd.jpg" alt="vprecruitment" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Recruitment</div>
           <div class="thumbnail-secondary-header">Ellie Cooney</div>
@@ -166,7 +162,7 @@
   <div class="row"> 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpmarketing" class="img-responsive">
+        <img src="http://i.imgur.com/OkX9j2N.jpg" alt="vpmarketing" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Marketing</div>
           <div class="thumbnail-secondary-header">Ophelia Chen</div>
@@ -177,7 +173,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpphilanthropy" class="img-responsive">
+        <img src="http://i.imgur.com/GHBZAt6.jpg" alt="vpphilanthropy" width="200" height="200" class="img-responsive">
         <div class="caption" >
           <div class="thumbnail-header">VP of Philanthropy</div>
           <div class="thumbnail-secondary-header">Weber Gaowen</div>
@@ -188,7 +184,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpbrotherhood" class="img-responsive">
+        <img src="http://i.imgur.com/RBhFBlA.jpg" alt="vpbrotherhood" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Brotherhood</div>
           <div class="thumbnail-secondary-header">Jessie Prussick</div>
@@ -199,7 +195,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpbrotherhood" class="img-responsive">
+        <img src="http://i.imgur.com/dYBGlEA.jpg" alt="vpbrotherhood" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Brotherhood</div>
           <div class="thumbnail-secondary-header">Katherine Odom</div>
@@ -214,7 +210,7 @@
   <div class="row"> 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="vpalumnirelations" class="img-responsive">
+        <img src="http://i.imgur.com/AMdA324.jpg" alt="vpalumnirelations" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">VP of Alumni Relations</div>
           <div class="thumbnail-secondary-header">Morgan Hess</div>
@@ -225,7 +221,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="masterofrituals" class="img-responsive">
+        <img src="http://i.imgur.com/wIzu0uu.jpg" alt="masterofrituals" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">Master of Rituals</div>
           <div class="thumbnail-secondary-header">Kenny Dolgin</div>
@@ -236,7 +232,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="assistanttreasurer" class="img-responsive">
+        <img src="http://i.imgur.com/leAcxe6.jpg" alt="assistanttreasurer" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">Assistant Treasurer</div>
           <div class="thumbnail-secondary-header">Arjun Gandhi</div>
@@ -247,7 +243,7 @@
 
     <div class="col-md-3">
       <div class="thumbnail">
-        <img src="http://placehold.it/180x200" alt="webmaster" class="img-responsive">
+        <img src="http://i.imgur.com/39L5y3X.jpg" alt="webmaster" width="200" height="200" class="img-responsive">
         <div class="caption">
           <div class="thumbnail-header">Webmaster</div>
           <div class="thumbnail-secondary-header">Jarian Cottingham</div>
