--- a/facultyadvisor.html
+++ b/facultyadvisor.html
@@ -38,20 +38,16 @@
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="about.html">AKPsi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
+          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brotherhood<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="brothers.html">Brothers</a></li>
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
           <li role="presentation"><a href="facultyadvisor.html">Faculty Advisor</a></li>
         </ul></li>
-    <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Events<span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="rush.html">Recruitment</a></li>
-          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
-        </ul></li>
+    <li role="presentation"><a href="rush.html">Recruitment</a></li>
     <li role="presentation"><a href="careers.html">Careers</a></li>
     <li role="presentation"><a href="alumni.html">Alumni</a></li>
     <li role="presentation"><a href="contact.html">Contact</a></li>
@@ -67,18 +63,18 @@
 <div class="container">
   <div class="page-header">Faculty Advisor</div>
   <div class="row">
-    <div class="col-md-3">
-      <img src="http://placehold.it/180x200" alt="yoongroves" class="img-responsive">
+    <div class="col-md-2">
+      <img src="http://www.olin.wustl.edu/SiteCollectionImages/faculty_staff_thumbnails/groves.jpg" alt="yoongroves" width="140" height="190" class="img-responsive">
     </div>
 
-    <div class="col-md-9">
+    <div class="col-md-10">
       <div class="subsection-header">Yoon Groves</div>
       <p>Associate Director for Advising and Student Services
       <br>Student Services, Olin Business School
       <br>Washington University in St. Louis
       <br><a href="mailto:yoongroves@wustl.edu?Subject=Hi,%20Yoon!" target="_top">yoon.groves@wustl.edu</a>
       <br>(314) 935-3328
-      <br><br>Yoon Groves joined the Olin staff in 2012 in her role as academic advisor. She additionally works closely with student groups, including Alpha Kappa Psi.</p>
+      <br><br>Yoon Groves joined the Olin staff in 2012 in her current role as the an Associate Director of Academic and Student Services, as well as a student advisor. She additionally works closely with student groups in the business school, including Alpha Kappa Psi, through the Olin Executive Council. Yoon received a Bachelor of Science in Business Administration at the University of Missouri-Columbia and a Master of Arts in Student Personnel Administration from Saint Louis University.</p>
     </div>
   </div>
 </div>
