--- a/alumni.html
+++ b/alumni.html
@@ -38,20 +38,16 @@
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="about.html">AKPsi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
+          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brotherhood<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="brothers.html">Brothers</a></li>
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
           <li role="presentation"><a href="facultyadvisor.html">Faculty Advisor</a></li>
         </ul></li>
-    <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Events<span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="rush.html">Recruitment</a></li>
-          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
-        </ul></li>
+    <li role="presentation"><a href="rush.html">Recruitment</a></li>
     <li role="presentation"><a href="careers.html">Careers</a></li>
     <li role="presentation"><a href="alumni.html">Alumni</a></li>
     <li role="presentation"><a href="contact.html">Contact</a></li>
@@ -66,13 +62,22 @@
 <!-- Body Start -->
 <div class="container">
 <div class="page-header">Alumni</div>
+  <div class="col-sm-6 col-md-12">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/WG6eBRa.jpg" alt="graduation" width="700" height="350" class="img-responsive">
+      </div>
+    </div>
+
   <div class="col-md-8">
   <div class="row">
     <div class="section-header">Tell us what you're up to!</div>
     <iframe id="JotFormIFrame" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="http://form.jotform.us/form/51050185498154" frameborder="0" style="width:100%; height:1029px; border:none;" scrolling="no"></iframe>
     <script type="text/javascript">window.handleIFrameMessage = function(e) {var args = e.data.split(":");var iframe = document.getElementById("JotFormIFrame");if (!iframe)return;switch (args[0]) {case "scrollIntoView":iframe.scrollIntoView();break;case "setHeight":iframe.style.height = args[1] + "px";break;case "collapseErrorPage":if (iframe.clientHeight > window.innerHeight) {iframe.style.height = window.innerHeight + "px";}break;case "reloadPage":window.location.reload();break;}};if (window.addEventListener) {window.addEventListener("message", handleIFrameMessage, false);} else if (window.attachEvent) {window.attachEvent("onmessage", handleIFrameMessage);}</script>
-    <p>Please contact our VP of Alumni Relations Morgan Hess at <a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">morganhess@wustl.edu</a> for any questions or inquiries.</p>
   </div>
+  </div>
+
+  <div class="col-md-12">
+  <p>Please contact our VP of Alumni Relations Morgan Hess at <a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">morganhess@wustl.edu</a> for any questions or inquiries.</p>
   </div>
 </div>
 <!-- Body End -->
