--- a/contact.html
+++ b/contact.html
@@ -38,20 +38,16 @@
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="about.html">AKPsi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
+          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brotherhood<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="brothers.html">Brothers</a></li>
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
           <li role="presentation"><a href="facultyadvisor.html">Faculty Advisor</a></li>
         </ul></li>
-    <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Events<span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="rush.html">Recruitment</a></li>
-          <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
-        </ul></li>
+    <li role="presentation"><a href="rush.html">Recruitment</a></li>
     <li role="presentation"><a href="careers.html">Careers</a></li>
     <li role="presentation"><a href="alumni.html">Alumni</a></li>
     <li role="presentation"><a href="contact.html">Contact</a></li>
@@ -66,9 +62,14 @@
 <!-- Body Start -->
 <div class="container">
 <div class="page-header">Contact</div>
-  <div class="row">
-    <img src="" alt="" class="img-responsive">
-  </div>
+    <div class="col-sm-6 col-md-12">
+      <div class="thumbnail">
+        <img src="http://upload.wikimedia.org/wikipedia/commons/9/92/Brookings.jpg" alt="washingtonuniversity" width="900" height="350" class="img-responsive">
+      </div>
+    </div>
+
+  <div class="padding"></div>
+  <div class="padding"></div>
 
   <div class="row">
     <div class="col-md-8">
