--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brotherhood<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="brothers.html">Brotherhood</a></li>
+          <li role="presentation"><a href="brothers.html">Brothers</a></li>
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
           <li role="presentation"><a href="facultyadvisor.html">Faculty Advisor</a></li>
         </ul></li>
