--- a/brothers.html
+++ b/brothers.html
@@ -41,9 +41,9 @@
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brotherhood<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="brothers.html">Brotherhood</a></li>
+          <li role="presentation"><a href="brothers.html">Brothers</a></li>
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
           <li role="presentation"><a href="facultyadvisor.html">Faculty Advisor</a></li>
         </ul></li>
@@ -67,19 +67,19 @@
   <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="http://i.imgur.com/VdKRtXM.jpg" alt="pic" width="350" height="350" class="img-responsive">
+        <img src="http://i.imgur.com/R5fhsFI.jpg" alt="pic" width="350" height="350" class="img-responsive">
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="" alt="pic" width="350" height="350" class="img-responsive">
+        <img src="http://i.imgur.com/XY3JbFI.jpg" alt="pic" width="350" height="350" class="img-responsive">
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="http://i.imgur.com/BNYaox7.jpg" alt="pic" width="350" height="350" class="img-responsive">
+        <img src="http://i.imgur.com/iGe5Qkr.jpg" alt="pic" width="350" height="350" class="img-responsive">
       </div>
     </div>
   </div>
@@ -87,17 +87,21 @@
 
   <!-- Row 2 Start -->
   <div class="row">
-
-
-    <div class="col-sm-6 col-md-6">
+    <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="http://i.imgur.com/pOERh0E.jpg" alt="pic" width="350" height="350" class="img-responsive">
+        <img src="http://i.imgur.com/VdKRtXM.jpg" alt="pic" width="500" height="750" class="img-responsive">
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="http://i.imgur.com/gf83Zt3.jpg" alt="pic" width="350" height="350" class="img-responsive">
+        <img src="http://i.imgur.com/u8THduO.jpg" alt="pic" width="500" height="750" class="img-responsive">
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="http://i.imgur.com/BNYaox7.jpg" alt="pic" width="500" height="750" class="img-responsive">
       </div>
     </div>
   </div>
@@ -107,7 +111,7 @@
   <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="http://i.imgur.com/iGe5Qkr.jpg" alt="pic" width="350" height="500" class="img-responsive">
+        <img src="http://i.imgur.com/6V3rsb4.jpg" alt="pic" width="350" height="350" class="img-responsive" alt="pic" width="350" height="500" class="img-responsive">
       </div>
     </div>
 
@@ -124,24 +128,6 @@
     </div>
   </div>
   <!-- Row 3 End -->
-
-  <!-- Row 4 Start -->
-  <div class="row">
-    <div class="col-md-6 col-md-6">
-      <div class="thumbnail">
-        <img src="" alt="pic" width="350" height="500" class="img-responsive">
-      </div>
-    </div>
-
-    <div class="col-md-6 col-md-6">
-      <div class="thumbnail">
-        <img src="http://i.imgur.com/UmG5p5c.jpg" alt="pic" width="350" height="350" class="img-responsive">
-      </div>
-    </div>
-  </div>
-  <!-- Row 4 End-->
-  http://i.imgur.com/QNNnzzo.jpg
-
 </div>
 
 <div class="padding"></div>
