--- a/executiveboard.html
+++ b/executiveboard.html
@@ -41,7 +41,7 @@
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
     <li role="presentation" class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brothers<span class="caret"></span></a>
+      <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">Brotherhood<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <li role="presentation"><a href="brothers.html">Brothers</a></li>
           <li role="presentation"><a href="executiveboard.html">Executive Board</a></li>
